// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`activity-artist draw fork 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "circle",
          },
        ],
        "class": "activity__keyword",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "class": "activity__decision-bg",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "multiprocessor?",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#fdb05e",
          "stroke": "#3b4044",
        },
        "class": "activity__condition-end",
        "type": "path",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#3b4044",
              "radius": 2,
            },
            "type": "rect",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fdb05e",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "text": "Action 1",
                      "textAlign": "center",
                      "textBaseline": "middle",
                    },
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "stroke": "#3b4044",
                },
                "type": "rect",
              },
              {
                "attrs": {
                  "fill": "#3b4044",
                  "fontFamily": "Source Code Pro, sans-serif",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "text": "Action 1",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "type": "text",
              },
            ],
            "type": "group",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fdb05e",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "text": "Action 2",
                      "textAlign": "center",
                      "textBaseline": "middle",
                    },
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "stroke": "#3b4044",
                },
                "type": "rect",
              },
              {
                "attrs": {
                  "fill": "#3b4044",
                  "fontFamily": "Source Code Pro, sans-serif",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "text": "Action 2",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "radius": 2,
        },
        "type": "rect",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "Action 1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "Action 2",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "circle",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "circle",
          },
        ],
        "class": "activity__keyword",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fff",
              "opacity": 0.85,
            },
            "class": "label-bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "id": "id-2-id-3",
              "text": "yes",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "activity__edge-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fff",
              "opacity": 0.85,
            },
            "class": "label-bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "id": "id-2-id-8",
              "text": "monoproc",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "activity__edge-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`activity-artist draw repeat 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "circle",
          },
        ],
        "class": "activity__keyword",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "class": "activity__decision-bg",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "there is more data ?",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "prepare for each loop",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "activity__repeat-start",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "read data",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "class": "activity__decision-bg",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "not done ?",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#fdb05e",
          "stroke": "#3b4044",
        },
        "class": "activity__repeat-start",
        "type": "path",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "do something",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "circle",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "circle",
          },
        ],
        "class": "activity__keyword",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fff",
              "opacity": 0.85,
            },
            "class": "label-bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "id": "id-2-end-id-2",
              "text": "alright then",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "activity__edge-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fff",
              "opacity": 0.85,
            },
            "class": "label-bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "id": "id-2-end-id-4",
              "text": "nope",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "activity__edge-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fff",
              "opacity": 0.85,
            },
            "class": "label-bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "id": "id-4-end-id-6",
              "text": "no",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "activity__edge-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#fdb05e",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;
